[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVariables.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/Editors/DatapackSceneEditor.gd" type="Script" id=2]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/DatapackSceneCodeWrapper.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/PossibleCodeBlocksList.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/Datapacks/UI/CrotchCode/UI/VarListEntry.tscn" type="PackedScene" id=5]

[node name="DatapackSceneEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer/MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" type="HBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/TabContainer/Info"]
margin_right = 1272.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PackVariables" parent="VBoxContainer/MarginContainer/TabContainer/Info/ScrollContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1272.0
margin_bottom = 20.0

[node name="States" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/MarginContainer/TabContainer/States"]
margin_right = 1272.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatesList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer"]
margin_right = 206.0
margin_bottom = 660.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList"]
margin_right = 206.0
margin_bottom = 14.0
text = "States"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList"]
margin_top = 18.0
margin_right = 206.0
margin_bottom = 42.0

[node name="NewStateLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList/HBoxContainer"]
margin_right = 165.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AddNewStateButton" type="Button" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList/HBoxContainer"]
margin_left = 169.0
margin_right = 206.0
margin_bottom = 24.0
text = "Add"

[node name="StatesList" type="ItemList" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList"]
margin_top = 46.0
margin_right = 206.0
margin_bottom = 636.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RemoveStateButton" type="Button" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList"]
margin_top = 640.0
margin_right = 206.0
margin_bottom = 660.0
text = "Delete state"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer"]
margin_left = 218.0
margin_right = 1272.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer"]
margin_right = 1054.0
margin_bottom = 14.0
text = "State"
align = 1

[node name="HBoxContainer" type="HSplitContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1054.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 746.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateLabel" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 746.0
margin_bottom = 14.0
text = "Code for the current state"
align = 1

[node name="DatapackSceneCodeWrapper" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 746.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TestButton" type="Button" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 518.0
margin_right = 746.0
margin_bottom = 538.0
text = "Test"

[node name="OutputTextLabel" type="RichTextLabel" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 542.0
margin_right = 746.0
margin_bottom = 642.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
bbcode_enabled = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 758.0
margin_right = 1054.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 296.0
margin_bottom = 14.0
text = "Code blocks"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 296.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PossibleCodeBlocksList" parent="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ScrollContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 296.0
margin_bottom = 624.0

[node name="Variables" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables"]
margin_right = 1272.0
margin_bottom = 14.0
text = "Add new scene variable"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/Variables"]
margin_top = 18.0
margin_right = 1272.0
margin_bottom = 42.0

[node name="AddVarButton" type="Button" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer"]
margin_right = 37.0
margin_bottom = 24.0
text = "Add"

[node name="NewVarLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer"]
margin_left = 41.0
margin_right = 1272.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "name"

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables"]
margin_top = 46.0
margin_right = 1272.0
margin_bottom = 60.0
text = "Scene Variables:"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/Variables"]
margin_top = 64.0
margin_right = 1272.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer2"]
margin_right = 393.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer2"]
margin_left = 397.0
margin_right = 790.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Type"

[node name="Label3" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer2"]
margin_left = 794.0
margin_right = 1188.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Default value"

[node name="Label4" type="Label" parent="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer2"]
margin_left = 1192.0
margin_right = 1272.0
margin_bottom = 14.0
rect_min_size = Vector2( 80, 0 )

[node name="VarList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/TabContainer/Variables"]
margin_top = 82.0
margin_right = 1272.0
margin_bottom = 102.0

[node name="VarListEntry" parent="VBoxContainer/MarginContainer/TabContainer/Variables/VarList" instance=ExtResource( 5 )]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -291.0
margin_top = 13.0
margin_right = -138.0
margin_bottom = 39.0

[node name="RunButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 26.0
text = "Run scene"

[node name="PickSaveButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 153.0
margin_bottom = 26.0
text = "Pick save"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0
columns = 5

[node name="SaveButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Save"

[connection signal="onVariableChange" from="VBoxContainer/MarginContainer/TabContainer/Info/ScrollContainer/PackVariables" to="." method="_on_PackVariables_onVariableChange"]
[connection signal="visibility_changed" from="VBoxContainer/MarginContainer/TabContainer/States" to="." method="_on_States_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList/HBoxContainer/AddNewStateButton" to="." method="_on_AddNewStateButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList/StatesList" to="." method="_on_StatesList_item_selected"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/StatesList/RemoveStateButton" to="." method="_on_RemoveStateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/TabContainer/States/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/TabContainer/Variables/HBoxContainer/AddVarButton" to="." method="_on_AddVarButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/PickSaveButton" to="." method="_on_PickSaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
